2010-11-22  Miloslav Trmač  <mitr@redhat.com>

	* lib/crypto.c (init_gpgme): Placate gpgme 1.2.

2010-10-20  Miloslav Trmač  <mitr@redhat.com>

	* contrib/email/README
	* contrib/email/escrow-receive
	* contrib/email/escrow-transit: New files, contributed by Marko Myllynen
	<myllynen@redhat.com>.
	* Makefile.am (EXTRA_DIST): Distribute the email scripts.

2010-10-18  Miloslav Trmač  <mitr@redhat.com>

	* src/volume_key.c (pos_interact): Split from pos_init ().
	(do_save, do_reencrypt): Call pos_init () as early as possible.  Use
	pos_interact () at the original location.

	* lib/volume_luks.c (luks_apply_secret)
	* src/volume_key.c (pos_interact): Only tell the user about an incorrect
	passphrase once.

	* src/volume_key.c (passphrase_ui_cb): Tell the user when a non-NSS
	passphrase is incorrect.

2010-10-08  Miloslav Trmač  <mitr@redhat.com>

	* src/volume_key.c (get_password): New function.
	(nss_password_fn, generic_ui_cb, passphrase_ui_cb): Use get_password ()
	instead of getpass ().

2010-09-29  Miloslav Trmač  <mitr@redhat.com>

	* lib/SSLerrs.h: New file.
	* Makefile.am (lib_libvolume_key_la_SOURCES): Add lib/SSLerrs.h.
	* lib/nss_error.c (mapping): Use SSLerrs.h.

	* README
	* doc/volume_key.8: Clarify which block device should be passed to
	volume_key(8).

2010-08-27  Miloslav Trmač  <mitr@redhat.com>

	* configure.ac: Release 0.3.4.
	* NEWS: Update.
	* po/LINGUAS: Update.
	* Makefile.am (lib_libvolume_key_la_LDFLAGS): Update version info.

2010-07-22  Miloslav Trmač  <mitr@redhat.com>

	* configure.ac: Use AC_SYS_LARGEFILE, required by gpgme.

2010-06-14  Miloslav Trmač  <mitr@redhat.com>

	* src/volume_key.c (generate_random_passphrase): Use a character set
	with 2^N characters to make sure all choices are equally likely.  Use
	20 characters (in groups of 5), overall increasing the passphrase
	strength of 120 bits instead of 31.359 bits.

	* src/volume_key.c (do_save): Zero the generated passphrase before
	freeing it.
